// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element-node.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class="attribute" {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />

<span>adjacent without space</span>foo
<span>adjacent with space</span> foo

<div>
  <div>
    <div>
      testing deeply nested content
    </div>
  </div>
</div>

<div>
  <span>
    <strong>{{name}}</strong>’s{{' '}}
  </span>
  Hello <strong>world</strong>.<br />
  <Text>You {{type}}ed this shipment to</Text>
</div>
=====================================output=====================================
<div class='attribute' {{modifier}} {{! comment}}>Hello</div>

<div>Hello</div>

<div>hi</div>

<div>A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>{{hello}}</div>

<div></div>
<img />

<span>adjacent without space</span>
foo
<span>adjacent with space</span>
foo

<div><div><div>testing deeply nested content</div></div></div>

<div>
  <span>
    <strong>{{name}}</strong>
    ’s{{' '}}
  </span>
  Hello
  <strong>world</strong>
  .
  <br />
  <Text>You {{type}}ed this shipment to</Text>
</div>
================================================================================
`;

exports[`element-node.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="attribute" {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />

<span>adjacent without space</span>foo
<span>adjacent with space</span> foo

<div>
  <div>
    <div>
      testing deeply nested content
    </div>
  </div>
</div>

<div>
  <span>
    <strong>{{name}}</strong>’s{{' '}}
  </span>
  Hello <strong>world</strong>.<br />
  <Text>You {{type}}ed this shipment to</Text>
</div>
=====================================output=====================================
<div class="attribute" {{modifier}} {{! comment}}>Hello</div>

<div>Hello</div>

<div>hi</div>

<div>A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>{{hello}}</div>

<div></div>
<img />

<span>adjacent without space</span>
foo
<span>adjacent with space</span>
foo

<div><div><div>testing deeply nested content</div></div></div>

<div>
  <span>
    <strong>{{name}}</strong>
    ’s{{" "}}
  </span>
  Hello
  <strong>world</strong>
  .
  <br />
  <Text>You {{type}}ed this shipment to</Text>
</div>
================================================================================
`;
